--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ img {
     max-width: 100%;
 }
 
+/* Testa articolo con logo e pattern di sfondo */
 #header-pattern {
     background-image: url(../img/pattern.png);
     background-color: #4ea0ff;
@@ -19,3 +20,5 @@ img {
     width: 13%;
     margin: 5vh 0 0 10px;
 }
+
+/* Fine testa */
