--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ img {
     max-width: 100%;
 }
 
+.container {
+    padding: 5px;
+}
+
 /* Testa articolo con logo e pattern di sfondo */
 #header-pattern {
     background-image: url(../img/pattern.png);
@@ -89,3 +93,26 @@ table .aqua-row {
 }
 
 /* Footer */
+footer h3 {
+    color: grey;
+}
+
+footer #monitor,
+footer #graph {
+    height: 200px;
+    color: white;
+    font-weight: bold;
+    font-size: 1.5em;
+    padding: 10px;
+    background-image: url(../img/monitor.jpg);
+    background-repeat: no-repeat;
+    margin-bottom: 10px;
+}
+
+footer #monitor {
+    background-image: url(../img/monitor.jpg);
+}
+
+footer #graph {
+    background-image: url(../img/graph.jpg);
+}
