--- a/css/style2.css
+++ b/css/style2.css
@@ -19,12 +19,13 @@ img {
 /* Testa articolo con logo e pattern di sfondo */
 #header-pattern {
     background-image: url(../img/pattern.png);
-    background-color: #4ea0ff;
+    background-color: rgba(80, 140, 208, 0.8);
     background-size: 25%;
+    height: 15vh;
 }
 
 #header-pattern img {
-    width: 13%;
+    width: 200px;
     margin: 5vh 0 0 10px;
 }
 
@@ -33,7 +34,7 @@ img {
 /* Inizio stile Container */
 /* Header */
 #header-title {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     display: flex;
     justify-content: center;
 }
@@ -67,7 +68,7 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px 0;
+    margin-bottom: 50px;
 }
 
 
@@ -76,7 +77,7 @@ section {
 table {
     text-align: left;
     border-collapse: collapse;
-    width: 50%;
+    width: 70%;
     margin-left: 50%;
     transform: translateX(-50%);
 }
