--- a/css/style.css
+++ b/css/style.css
@@ -95,22 +95,22 @@ footer h3 {
     color: grey;
 }
 
-footer #monitor,
-footer #graph {
+footer article {
+    width: 250px;
     height: 200px;
+}
+
+footer article a {
     color: white;
-    font-weight: bold;
-    font-size: 1.5em;
-    padding: 10px;
-    background-image: url(../img/monitor.jpg);
-    background-repeat: no-repeat;
-    margin-bottom: 10px;
+    font-size: 18px;
+    text-decoration: none;
 }
 
 footer #monitor {
-    background-image: url(../img/monitor.jpg);
+    background-image: url("../img/monitor.jpg");
+    background-size: 100%;
 }
 
 footer #graph {
-    background-image: url(../img/graph.jpg);
+    background-image: url("../img/graph.jpg");
 }
